[gd_scene load_steps=9 format=3 uid="uid://bk3plt4gruvxh"]

[ext_resource type="Script" uid="uid://edwdnyo1461g" path="res://scripts/pop_up.gd" id="1_rostw"]
[ext_resource type="Texture2D" uid="uid://b7hhii6260ji4" path="res://assets/windows-bg.jpg" id="2_pjxvf"]
[ext_resource type="PackedScene" uid="uid://1l6vx4juq37i" path="res://scenes/ClankerAd.tscn" id="3_h664c"]
[ext_resource type="Texture2D" uid="uid://b4caf0j03ldl7" path="res://assets/crash-screen.png" id="4_q4bxk"]
[ext_resource type="PackedScene" uid="uid://ryn61yia5lu" path="res://scenes/BrainAd.tscn" id="5_o2007"]
[ext_resource type="PackedScene" uid="uid://e1jptrbhg2pb" path="res://scenes/SelfDestructAd.tscn" id="6_oe0yv"]
[ext_resource type="PackedScene" uid="uid://0meabi8klry0" path="res://scenes/OceanAd.tscn" id="7_qd28d"]
[ext_resource type="PackedScene" uid="uid://bcsc75u1wa1rp" path="res://scenes/ArtistAd.tscn" id="8_55l20"]

[node name="Node2D" type="Node2D"]
z_index = 1
script = ExtResource("1_rostw")

[node name="crashScreen" type="Sprite2D" parent="."]
visible = false
top_level = true
z_index = 2
position = Vector2(579.0851, 328.0625)
scale = Vector2(1.1855407, 1.2182871)
texture = ExtResource("4_q4bxk")

[node name="windowsBG" type="Sprite2D" parent="."]
visible = false
position = Vector2(575.3334, 322.25)
scale = Vector2(0.3006944, 0.3006944)
texture = ExtResource("2_pjxvf")

[node name="ClankerAd" parent="." instance=ExtResource("3_h664c")]
position = Vector2(-142.99994, 222.00002)

[node name="BrainAd" parent="." instance=ExtResource("5_o2007")]
position = Vector2(-140, 631)

[node name="SelfDestructAd" parent="." instance=ExtResource("6_oe0yv")]
position = Vector2(-243, 937)

[node name="OceanAd" parent="." instance=ExtResource("7_qd28d")]
position = Vector2(-384, 463)

[node name="ArtistAd" parent="." instance=ExtResource("8_55l20")]
position = Vector2(-619.99994, 460.00006)
